--- a/src/assets/sass/_utils.functions.scss
+++ b/src/assets/sass/_utils.functions.scss
@@ -1,3 +1,6 @@
+@use "sass:list";
+@use "sass:map";
+@use "sass:string";
 @use "sass:math";
 
 $body-font-size: 16px;
@@ -13,18 +16,18 @@ $body-font-size: 16px;
 }
 
 @function str-replace($string, $search, $replace: '') {
-  $index: str-index($string, $search);
+  $index: string.index($string, $search);
 
   @if $index {
-    @return str-slice($string, 1, $index - 1) + $replace +
-      str-replace(str-slice($string, $index + str-length($search)), $search, $replace);
+    @return string.slice($string, 1, $index - 1) + $replace +
+      str-replace(string.slice($string, $index + string.length($search)), $search, $replace);
   }
   @return $string;
 }
 
 @function str-replace-all($strings, $search, $replace: '') {
   @each $string in $strings {
-    $strings: set-nth($strings, index($strings, $string), str-replace($string, $search, $replace));
+    $strings: list.set-nth($strings, list.index($strings, $string), str-replace($string, $search, $replace));
   }
   @return $strings;
 }
@@ -33,7 +36,7 @@ $body-font-size: 16px;
   $new-map: ( );
 
   @each $key, $value in $map {
-    $new-map: map-merge($new-map, ($key: str-replace(#{pxToRem($value)}, 'px')));
+    $new-map: map.merge($new-map, ($key: str-replace(#{pxToRem($value)}, 'px')));
   }
   @return $new-map;
 }
