--- a/src/features/AdminPage/InterestingFacts/Modal/InterestingFactsAdminModal.styles.scss
+++ b/src/features/AdminPage/InterestingFacts/Modal/InterestingFactsAdminModal.styles.scss
@@ -14,6 +14,20 @@
         gap: 16px;
     }
 
+    .interesting-facts-modal-image {
+        flex-shrink: 0;
+        width: 120px;
+        height: 120px;
+        border-radius: 4px;
+        overflow: hidden;
+        background-color: #f5f5f5;
+
+        .ant-image {
+            width: 100%;
+            height: 100%;
+        }
+    }
+
     .interesting-facts-modal-text {
         flex: 1;
         min-width: 0;
